# sw-wr

./: Cargo.toml
swgl/: Cargo.toml  build.rs
swgl/shaders/: Makefile  brush_blend.frag  brush_blend.frag.pp  brush_blend.vert  brush_blend.vert.pp  brush_blendALPHA_PASS.frag  brush_blendALPHA_PASS.frag.pp  brush_blendALPHA_PASS.vert  brush_blendALPHA_PASS.vert.pp  brush_image.frag  brush_image.frag.pp  brush_image.vert  brush_imageALPHA_PASS.frag  brush_imageALPHA_PASS.vert  brush_imageALPHA_PASS.vert.pp  brush_imageREPETITION.ANTIALIASING.ALPHA_PASS.frag  brush_imageREPETITION.ANTIALIASING.ALPHA_PASS.frag.pp  brush_imageREPETITION.ANTIALIASING.ALPHA_PASS.vert  brush_imageREPETITION.ANTIALIASING.ALPHA_PASS.vert.pp  brush_imageREPETITION.ANTIALIASING.frag  brush_imageREPETITION.ANTIALIASING.frag.pp  brush_imageREPETITION.ANTIALIASING.vert  brush_imageREPETITION.ANTIALIASING.vert.pp  brush_linear_gradient.frag  brush_linear_gradient.frag.pp  brush_linear_gradient.vert  brush_linear_gradient.vert.pp  brush_linear_gradientALPHA_PASS.frag  brush_linear_gradientALPHA_PASS.frag.pp  brush_linear_gradientALPHA_PASS.vert  brush_linear_gradientALPHA_PASS.vert.pp  brush_linear_gradientDITHERING.ALPHA_PASS.frag  brush_linear_gradientDITHERING.ALPHA_PASS.vert  brush_linear_gradientDITHERING.ALPHA_PASS.vert.pp  brush_linear_gradientDITHERING.frag  brush_linear_gradientDITHERING.frag.pp  brush_linear_gradientDITHERING.vert  brush_linear_gradientDITHERING.vert.pp  brush_mix_blend.frag  brush_mix_blend.frag.pp  (+114 more)
swgl/src/: TODO  gl.cc  gl_defs.h  glsl.h  program.h  sse_math.h  swgl_fns.rs  (+2 more)
(+44 files in other folders)
