[package]
name = "swgl"
version = "0.1.0"
license = "MPL-2.0"
authors = ["The Mozilla Project Developers"]
build = "build.rs"
description = "Software OpenGL implementation for WebRender."

[build-dependencies]
cc = "1.0.46"
glsl-to-cxx = { git = "https://github.com/jrmuizel/glsl-to-cxx" }

[dependencies]
gleam = "0.6.17"
